<resources>
    <string name="app_name">OOVEO</string>
    <string name="welcome_back">Welcome back.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="hello_there">Hello there</string>
    <string name="or_login_with">Or Login with Google</string>
    <string name="new_user">New user?</string>
    <string name="register_now">Register Now</string>
    <string name="wave_img">wave-img</string>
    <string name="google">google</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="jan_01_2021">JAN 01 2021</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="choose_language">CHOOSE LANGUAGE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="versi_1_0_0">Versi 1.0.0</string>
    <string name="pilih_bahasa">PILIH BAHASA</string>
    <string name="phone_Number">Phone Number</string>
    <string name="_62">+62</string>
    <string name="verification_code_sms">Verification Code SMS</string>
    <string name="verification_code_p1">Please enter the SMS code within in the next five Minutes. The code might be sent in 10 to 60 seconds.</string>
    <string name="verification_code_p2">Please allow the counter to finish before you can request another SMS code, But relax it usually won\'t take that long.</string>
    <string name="phone_number_p2">Rest assured we will never share your personal data with anyone. All data is encrypted to protected your privacy</string>
    <string name="phone_number_p1">Please enter your mobile number to verify your account. We will send a notification code to your number via SMS.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_merchant">Register Merchant</string>
    <string name="address">Address</string>
    <string name="upload_banner">Upload Banner</string>
    <string name="no_file_seletced">No file seletced</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="send_verification_code">send verification code</string>
    <string name="hai_terima_kasih_sudah_menginstall_ooveo">Hai, terima kasih sudah menginstall OOVEO!</string>
    <string name="klik_bahasa_indonesia_untuk_melanjutkan_dengan_bahasa">Klik Bahasa Indonesia untuk melanjutkan dengan Bahasa.</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="english">English</string>
    <string name="click_english_to_continue_with_english">Click English to continue with English</string>
    <string name="change_photo">change photo</string>
    <string name="try_out_our_dark_mode">Try Out Our Dark Mode</string>
    <string name="app_dark_mode">App Dark Mode</string>
    <string name="register_new_merchant">Register new Merchant</string>
    <string name="next">Next</string>
    <string name="location">Location</string>
    <string name="changePassword_p1">Make sure your number still active, we must to make sure it is real you to change password</string>
    <string name="verificationCode_P1">OTP has been sent to Your Number Please Verify</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="back_to_change_phone_number">Back to change phone number</string>
    <string name="changePhoneNumber_P1">Insert your new Phone Number, make sure your number active to change phone Number</string>
    <string name="back_to_profile_page">Back to profile page</string>
    <string-array name="types">
        <item>Barber</item>
        <item>Beauty</item>
        <item>Reflexology</item>
        <item>Salon </item>
    </string-array>
    <string name="please_choose_type">Please choose type</string>
    <string-array name="rating">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="Merchant_Admin">Merchant Admin</string>
    <string name="enter_your_comment_or_request_here">Enter your comment or request here</string>
    <string name="this_outlet_needs_it_s_customer_book_and_come_early_at_least_15_minutes_before_appointment">This outlet needs its customer book and come early at least 15 Minutes before appointment</string>
    <string name="to_honor_the_business_please_don_t_cancel_the_appointment_within_1_hour_before_your_commitment_is_truly_appreciated">To honor the business, please don not cancel the appointment within 1 hour before. Your commitment is truly appreciated.</string>
    <string name="booking_comments_or_request">Booking Comments or Request</string>
    <string name="checkin_policy">Checkin Policy</string>
    <string name="stylist_name">Stylist Name</string>
    <string name="service_name">Service name</string>
    <string name="cancelation_policy">Cancelation Policy</string>
    <string name="confirm_booking_and_pay">Confirm Booking and Pay</string>
    <string name="starting_at_12_00">Starting at 12:00</string>
    <string name="date">Date</string>
    <string name="booking_summary">BOOKING SUMMARY</string>
    <string name="_12_00_12_30">12:00 - 12:30</string>
    <string name="idr_65_000">IDR. 65.000</string>
    <string name="total">Total</string>
    <string name="cash_on_merchant">Cash On Merchant</string>
    <string name="disable_dark_mode">Disable Dark Mode</string>
    <string name="enable_light_mode">Enable Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="confirmBook_message">Your appointment will be made and you can make the payment at the merchant</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="yes_proceed_booking">Yes, Proceed the booking</string>
    <string name="no_cancel_booking">No, Cancel booking</string>
    <string name="starting_at">Starting at</string>
    <string name="booking_success">Booking Success</string>
    <string name="booking_code">Booking Code: </string>
    <string name="check_in_time">CHECK-IN TIME: </string>
    <string name="view_appointment_detail">View Appointment Detail</string>
    <string name="back_to_home">Back to Home</string>
    <string name="payment_method_cash_on_merchant">Payment Method: Cash On Merchant</string>
    <string name="service_is">Service: </string>
    <string name="idr">IDR. </string>
    <string name="stylist_is">Stylist: </string>
    <string name="check_in_btn">Check In</string>
    <string name="appointment_booked_amp_confirmed"><![CDATA[Appointment Booked & Confirmed]]></string>
    <string name="payment_status">Payment Status</string>
    <string name="cancel_this_booking">Cancel this booking?</string>
    <string name="unpaid">Unpaid</string>
    <string name="cancelation_question">Are you sure to cancel this book? Please do not cancel the appointment within 1 hour before</string>
    <string name="yes_cancel_book">Yes, Cancel this booking</string>
    <string name="no_continue_booking">No, continue booking</string>
    <string name="loading">Loading..</string>
    <string name="detail">detail</string>
    <string name="check_in_question">Check in?</string>
    <string name="checin_message">Please come 15 minutes before to Check-In</string>
    <string name="checkin_positive_message">I have read all the policy, Check-In</string>
    <string name="cancel_checkin">Cancel Check-In</string>
    <string name="review_btn">Review</string>
    <string name="choose_rating">Choose Rating</string>
    <string name="feedback">Feedback</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_stylist_schedule">Add Stylist Schedule</string>
    <string name="start_hour_none">Start Hour : None</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="_00">: 00</string>
    <string name="add_new_service">Add New Service</string>
    <string name="service_price">Service Price</string>
    <string name="add_new_stylist">Add New Stylist</string>
    <string name="barber">Barber</string>
    <string name="beauty_bar">Beauty Bar</string>
    <string name="example_phone_number">example: 81276532***</string>
    <string name="delete_service">Delete Service</string>
    <string name="service_description">Service Description</string>
    <string name="delete_stylist">Delete Stylist</string>
    <string name="search_here">Search Here</string>
    <string name="salon">Salon</string>
    <string name="reflexology">Reflexology</string>
    <string name="edit_merchant">Edit Merchant</string>
    <string name="manage_stylist">Manage Stylist</string>
    <string name="update_stylist_schedule">Update Stylist Schedule</string>
    <string name="update_schedule">Update Schedule</string>
    <string name="update_service">Update Service</string>
    <string name="the_title_of_a_blog">The Title of a Blog</string>
    <string name="book_now">Book Now</string>
    <string name="call">Call</string>
    <string name="about_us">About Us</string>
    <string name="change_theme">Change Theme</string>
    <string name="merchant_rating_0">Merchant Rating : 0</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="choose">Choose</string>
    <string name="book_service">Book Service</string>
    <string name="schedule">Schedule</string>
    <string name="paid">Paid</string>
    <string name="register_as_merchant">Register as Merchant</string>
    <string name="merchantAddFav">Merchant Already in My Favorite</string>
    <string name="onGoingTab">On Going</string>
    <string name="historyTab">History</string>
    <string name="serviceTab">Services</string>
    <string name="reviewTab">Reviews</string>
    <string name="moreInfoTab">More Info</string>
    <string name="homeMenu">Home</string>
    <string name="favMenu">Favourite</string>
    <string name="appoinmentMenu">Appointment</string>
    <string name="profileMenu">Profile</string>
    <string name="barberLocation">Barber Location</string>
    <string name="errorStartHour">Start Hour must be filled</string>
    <string name="errorJamDipilih">Hour cannot be used, please choose another hour</string>
    <string name="gagalMessage">Fail</string>
    <string name="errorName">Name must be filled!</string>
    <string name="errorPrice">Price must be filled!</string>
    <string name="errorDescription">Description must be filled!</string>
    <string name="errorNameTiga">Name must be more than 3 character!</string>
    <string name="errorGenderSelect">Gender must be selected!</string>
    <string name="berhasilMessage">Success</string>
    <string name="checkInSuccess">Check-In Success</string>
    <string name="checkOutFailed">Check-In Failed</string>
    <string name="appointmentCancel">Appointment Canceled</string>
    <string name="appointmentCancelFailed">Appointment Canceled Failed</string>
    <string name="haveCompleteAppointment">Appointment Have Been Completed!</string>
</resources>